# axum-learn

./: .env  Cargo.toml
api/: Cargo.toml
api/src/: lib.rs  routes.rs
api/src/blog/: mod.rs  post.rs  posts.rs
common/: Cargo.toml
common/src/: db_conn.rs  error.rs  lib.rs  res.rs
common/src/entity/: post.rs
core/: Cargo.toml
core/src/: posts.rs
migration/: Cargo.toml
src/: main.rs
