[workspace]
members = [".","migration","api","core","middleware","common"]

[package]
name = "axum-learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "api" }
dotenvy = { workspace = true }

[workspace.dependencies]
axum = "0"
tokio = { version="1",features=["full"]}
dotenvy = "0"